# QSyncthingTray

./: .gitignore  .gitmodules  .qmake.stash  .travis.yml  CMakeLists.txt  QSyncThingTray.pro  QSyncthingTray.pro  README.md  appveyor.yml  main.cpp  qsyncthing.qrc  syncconnector.h  window.cpp  window.h
Debug/QSyncThingTray.app/Contents/: Info.plist
Debug/QSyncThingTray.app/Contents/MacOS/: QSyncThingTray
includes/: CMakeLists.txt  config.template.h
includes/contrib/: qcustomplot.h
includes/qst/: apihandler.hpp  appsettings.hpp  directorydata.h  directorymodel.h  identifiers.hpp  platforms.hpp  processcontroller.h  processmonitor.hpp  settingsmigrator.hpp  startuptab.hpp  statswidget.h  syncconnection.h  syncconnectionsettings.hpp  syncconnector.h  syncdevice.hpp  syncdeviceviewmodel.h  syncnativebrowser.h  syncviewwidget.h  syncwebbase.h  syncwebkitview.h  syncwebpage.h  syncwebview.h  trayIcon.h  trayMenu.h  updatenotifier.h  utilities.hpp  webview.h  window.h
resources/: Info.plist  Info.template.plist  Syncthing.icns  connections.ui  qsyncthing.qrc  qsyncthingblueanim.qrc  qsyncthingdarkanim.qrc  windows_metafile.rc
resources/images/: makeIcon.sh
scripts/: build_linux.sh  build_mac_package.sh  build_project.sh  clean.sh  generate_msvc.sh  generate_xcode.sh
sources/: CMakeLists.txt
sources/contrib/: qcustomplot.cpp
sources/qst/: directorymodel.cpp  main.cpp  processcontroller.cpp  processmonitor.cpp  startuptab.cpp  statswidget.cpp  syncconnection.cpp  syncconnector.cpp  syncdeviceviewmodel.cpp  syncnativebrowser.cpp  syncviewwidget.cpp  syncviewwidget.ui  syncwebkitview.cpp  syncwebpage.cpp  syncwebview.cpp  trayIcon.cpp  trayMenu.cpp  updatenotifier.cpp  window.cpp
src/: CMakeLists.txt  Info.plist  QSyncThingTray.pro  QSyncthingTray.pro  apihandler.hpp  build_linux.sh  build_project.sh  clean.sh  generate_msvc.sh  generate_xcode.sh  main.cpp  platforms.hpp  posixUtils.hpp  processmonitor.cpp  processmonitor.hpp  qsyncthing.qrc  startuptab.cpp  startuptab.hpp  syncconnector.cpp  syncconnector.h  syncwebpage.cpp  syncwebpage.h  syncwebview.cpp  syncwebview.h  systemUtils.hpp  utilities.hpp  winUtils.cpp  winUtils.hpp  window.cpp  window.h
